--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -79,8 +79,8 @@
     - restart keepalived
 
 - name: Dropping the tracking scripts
-  copy:
-    src: "{{ item.value.src_check_script }}"
+  template:
+    src: "{{ playbook_dir }}/templates/{{ item.value.src_check_script }}"
     dest: "{{ item.value.dest_check_script|default(item.value.check_script) }}"
     mode: "0755"
   with_dict: "{{ keepalived_scripts | default('{}') }}"
